[project]
name = "estimate-matching-model"
version = "0.1.0"
description = "Maximum likelihood estimation of one-to-one matching model with transferable utility"
authors = [
    { name="Esben Scriver Andersen", email="esbenscriver@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.7.1",
    "jaxopt>=0.8.5",
    "simple-pytree>=0.2.2",
    "squarem-jaxopt>=0.1.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
pythonPath = "src"

[tool.ruff]
src = ["src"]
